--- a/diploma/diploma/Views/Home/Index.cshtml
+++ b/diploma/diploma/Views/Home/Index.cshtml
@@ -1,17 +1,55 @@
 ﻿@{
+    Layout = null;
     ViewData["Title"] = "Home Page";
 }
+<link rel="stylesheet" type="text/css" href="~/css/authorize.css">
+<script language="JavaScript" type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
+<script language="JavaScript" type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/js/authorize.js" type="text/javascript"></script>
+<div class="container">
+    <div class="frame">
+        <div class="nav">
+            <ul class="links">
+                <li class="signin-active"><a class="btn">Sign in</a></li>
+                <li class="signup-inactive"><a class="btn">Sign up </a></li>
+            </ul>
+        </div>
+        <div ng-app ng-init="checked = false">
+            <form class="form-signin" action="" method="post" name="form">
+                <label for="username">Username</label>
+                <input class="form-styling" type="text" name="username" placeholder="" />
+                <label for="password">Password</label>
+                <input class="form-styling" type="text" name="password" placeholder="" />
+                <input type="checkbox" id="checkbox" />
+                <label for="checkbox"><span class="ui"></span>Keep me signed in</label>
+                <div>
+                    <input class="btn-signin" type="submit" value="Sign in"/>
+                </div>
+            </form>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>
-        @foreach (var tour in ViewBag.Tours)
-        {
-            <p>@tour.Id</p>
-            <p>@tour.TourName</p>
-            <p>@tour.TourDescription</p>
-            <p>@tour.TourTimeStart</p>
-        }
-    </p>
+            <form class="form-signup" action="" method="post" name="form">
+                <label for="fullname">Full name</label>
+                <input class="form-styling" type="text" name="fullname" placeholder="" />
+                <label for="email">Email</label>
+                <input class="form-styling" type="text" name="email" placeholder="" />
+                <label for="password">Password</label>
+                <input class="form-styling" type="text" name="password" placeholder="" />
+                <label for="confirmpassword">Confirm password</label>
+                <input class="form-styling" type="text" name="confirmpassword" placeholder="" />
+                <a ng-click="checked = !checked" class="btn-signup">Sign Up</a>
+            </form>
+
+            <div class="success">
+                <svg width="270" height="270" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 60 60" id="check" ng-class="checked ? 'checked' : ''"/>
+                    <path fill="#ffffff" d="M40.61,23.03L26.67,36.97L13.495,23.788c-1.146-1.147-1.359-2.936-0.504-4.314
+                  c3.894-6.28,11.169-10.243,19.283-9.348c9.258,1.021,16.694,8.542,17.622,17.81c1.232,12.295-8.683,22.607-20.849,22.042
+                  c-9.9-0.46-18.128-8.344-18.972-18.218c-0.292-3.416,0.276-6.673,1.51-9.578" />
+                    <div class="successtext">
+                        <p> Thanks for signing up! Check your email for confirmation.</p>
+                    </div>
+            </div>
+        </div>
+    </div>
 </div>
+
